--- a/index.html
+++ b/index.html
@@ -227,8 +227,8 @@
 
   <div id="gameGrid" style="display: none;">
     <div class="game">
-      <a href="games/slope/index.html" target="_blank">
-        <img src="games/slope/icon.png" alt="Slope" />
+      <a href="Slope-Source-code-main/index.html" target="_blank">
+        <img src="Slope-Source-code-main/TemplateData/OIP.ico" alt="Slope" />
         <div class="game-title">Slope</div>
       </a>
     </div>
